First commit by yos
ทำหน้า homepage , condition , question

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
       <!-- partial:partials/_navbar.html -->
       <nav class="navbar default-layout-navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
         <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
-          <a class="navbar-brand brand-logo" href="{% url 'home' %}"><img src="/static/assets/images/logo.svg" alt="logo" /></a>
+          <a class="navbar-brand brand-logo" href="{% url 'home' %}"><img src="/static/assets/images/product_images_2/myScholarship.png" alt="logo" /></a>
           <a class="navbar-brand brand-logo-mini" href="{% url 'home' %}"><img src="/static/assets/images/logo-mini.svg" alt="logo" /></a>
         </div>
         <div class="navbar-menu-wrapper d-flex align-items-stretch">
@@ -131,33 +131,38 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'home' %}">
+                <i class="mdi mdi-arrow-right-bold menu-icon"></i>
                 <span class="menu-title">หน้าแรก</span>
-                <i class="mdi mdi-home menu-icon"></i>
+            
               </a>
             </li>
             <li class="nav-item">
               <!-- <a class="nav-link" href="pages/samples/widgets.html"> -->
               <a class="nav-link" href="{% url 'home' %}">
+                <i class="mdi mdi-arrow-right-bold menu-icon"></i>
                 <span class="menu-title">ข้อมูลทุนการศึกษา</span>
-                <i class="mdi mdi-account-star menu-icon"></i>
+  
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'home' %}">
+                <i class="mdi mdi-arrow-right-bold menu-icon"></i>
                 <span class="menu-title">สมัครรับทุน</span>
-                <i class="mdi mdi-account-check menu-icon"></i>
+                
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'home' %}">
+                <i class="mdi mdi-arrow-right-bold menu-icon"></i>
                 <span class="menu-title">ข้อมูลการรับทุน</span>
-                <i class="mdi mdi-account-check menu-icon"></i>
+                
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="pages/samples/widgets.html">
+                <i class="mdi mdi-arrow-right-bold menu-icon"></i>
                 <span class="menu-title">จัดการทุนในประเทศ</span>
-                <i class="mdi mdi-account-search menu-icon"></i>
+                 
               </a>
             </li>
             <!-- <li class="nav-item">
@@ -168,16 +173,12 @@
             </li> -->
             <li class="nav-item">
               <a class="nav-link" href="pages/samples/widgets.html">
+                <i class="mdi mdi-arrow-right-bold menu-icon"></i>
                 <span class="menu-title">จัดการทุนในประเทศ</span>
-                <i class="mdi mdi-cash-multiple menu-icon"></i>
+                
               </a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'home' %}">
-                <span class="menu-title">FAQ & ระเบียบการขอทุน</span>
-                <i class="mdi mdi-comment-question-outline menu-icon"></i>
-              </a>
-            </li>
+            
             <!-- <li class="nav-item">
               <a class="nav-link" data-toggle="collapse" href="#page-layouts" aria-expanded="false" aria-controls="page-layouts">
                 <span class="menu-title">Page Layouts</span>
