--- a/static/assets/css/demo_1/style.css
+++ b/static/assets/css/demo_1/style.css
@@ -2327,7 +2327,7 @@
   --breakpoint-xl: 1200px;
   --font-family-sans-serif: -apple-system, BlinkMacSystemFont, 'Segoe UI',
     Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
-    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji', 'Mitr';
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas,
     'Liberation Mono', 'Courier New', monospace;
 }
@@ -2340,7 +2340,7 @@
 }
 
 html {
-  font-family: sans-serif;
+  font-family: sans-serif,'Mitr';
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
@@ -2363,7 +2363,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
-    'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+    'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji','Mitr';
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -2497,7 +2497,7 @@ code,
 kbd,
 samp {
   font-family: SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono',
-    'Courier New', monospace;
+    'Courier New', monospace, 'Mitr';
   font-size: 1em;
 }
 
@@ -2565,6 +2565,7 @@ textarea {
 button,
 input {
   overflow: visible;
+  font-family: 'Mitr';
 }
 
 button,
@@ -4287,6 +4288,7 @@ pre code {
   padding: 0.9375rem;
   vertical-align: top;
   border-top: 1px solid #ebedf2;
+  font-family: 'Mitr';
 }
 .table thead th,
 .jsgrid .jsgrid-table thead th {
@@ -35122,6 +35124,7 @@ footer h4 a {
 .navbar .navbar-brand-wrapper .navbar-brand img {
   width: calc(260px - 120px);
   max-width: 100%;
+  width:
   height: 28px;
   margin: auto;
   vertical-align: middle;
@@ -36168,15 +36171,15 @@ footer h4 a {
 .sidebar .nav .nav-item .nav-link i.menu-icon {
   font-size: 1.125rem;
   line-height: 1;
-  margin-left: auto;
+  margin-right: 18px;
   color: #bba8bff5;
 }
 .rtl .sidebar .nav .nav-item .nav-link i.menu-icon {
   margin-left: 0;
-  margin-right: auto;
+  margin-right: 0;
 }
 .sidebar .nav .nav-item .nav-link i.menu-icon:before {
-  vertical-align: middle;
+  vertical-align: baseline;
 }
 .sidebar .nav .nav-item .nav-link i.menu-arrow {
   font: normal normal normal 24px/1 'Material Design Icons';
@@ -36198,7 +36201,7 @@ footer h4 a {
   content: '\f142';
 }
 .sidebar .nav .nav-item .nav-link i.menu-arrow + .menu-icon {
-  margin-left: 0.25rem;
+  margin-left: 0;
 }
 .rtl .sidebar .nav .nav-item .nav-link i.menu-arrow + .menu-icon {
   margin-left: 0;
@@ -36236,7 +36239,7 @@ footer h4 a {
   height: auto;
   line-height: 1;
   border-top: 0;
-  padding: 1.25rem 0;
+  padding: 0 0;
 }
 .sidebar .nav .nav-item.nav-profile .nav-link .nav-profile-image {
   width: 44px;
@@ -36457,12 +36460,12 @@ footer h4 a {
   }
   .sidebar-mini .sidebar .nav .nav-item .nav-link i.menu-icon {
     display: block;
-    margin-right: auto;
-    margin-left: auto;
+    margin-right: 0;
+    margin-left: 0;
   }
   .sidebar-mini .sidebar .nav .nav-item .nav-link i.menu-arrow {
     display: inline-block;
-    margin-left: 5px;
+    margin-left: 0;
     position: absolute;
     top: 50%;
     right: 10px;
@@ -36624,6 +36627,7 @@ footer h4 a {
     .nav-link
     .menu-title {
     background: #282037;
+    
   }
   .rtl.sidebar-icon-only
     .sidebar
